2013-08-15  Dmitry Antipov  <dmantipov@yandex.ru>

	Fix infinite frame selection loop (Bug#15025).
	* frame.c (delete_frame): Prefer fast ad-hoc loop to next_frame.

2013-08-15  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (compute_window_start_on_continuation_line): When
	WORD_WRAP is in effect, use move_it_to instead of move_it_by_lines
	to make sure we end up setting the window start at the leftmost
	visible character of the display line.  This avoids funky
	horizontal shifting because the window start is not kept on the
	same position.  (Bug#15090)
	(next_element_from_display_vector): Support 'box' face attribute
	in the face definitions of a display vector.  (Bug#15099)

2013-08-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* image.c (imagemagick_compute_animated_image): Implement animated
	images (bug#14700).
	(imagemagick_compute_animated_image): Fix some compilation
	warnings.  Implement a very simple cache to make the animation
	usable at all, but it should be replaced with a per-image cache.

2013-08-15  Dmitry Antipov  <dmantipov@yandex.ru>

	* lisp.h (FOR_EACH_ALIST_VALUE): New macro
	to do `for' loops over alist values.
	* buffer.h (FOR_EACH_BUFFER):
	* process.c (FOR_EACH_PROCESS): Use it.
	(handle_child_signal, status_notify, Fget_buffer_process)
	(kill_buffer_processes): Use FOR_EACH_PROCESS.

2013-08-15  Dmitry Antipov  <dmantipov@yandex.ru>

	* term.c (get_named_tty, create_tty_output, tty_free_frame_resources)
	(tty_free_frame_resources, delete_tty): Prefer eassert to emacs_abort.
	* image.c (make_image_cache): For struct image_cache, prefer xmalloc
	to xzalloc and so avoid redundant call to memset.
	* xterm.c (x_term_init): Avoid unnecessary initializations of dpyinfo
	members because it is allocated with xzalloc and so already zeroed.

2013-08-14  Ken Brown  <kbrown@cornell.edu>

	* gmalloc.c (memalign) [CYGWIN]: Rename to emacs_memalign
	(Bug#15094).

2013-08-14  Dmitry Antipov  <dmantipov@yandex.ru>
